[package]
name = "unix_perms"
version = "0.1.2"
edition = "2024"
authors = ["Santosh Shrestha <santoshxshrestha@gmail.com> "]
description = "Converts Unix file mode metadata into symbolic rwx strings, emulating the output of the ls -l command. Ideal for Rust-based system tools or file inspection utilities."
license = "MIT"
repository = "https://github.com/santoshxshrestha/unix_perms"
homepage = "https://github.com/santoshxshrestha/unix_perms"
documentation = "https://github.com/santoshxshrestha/unix_perms#readme"
readme = "README.md"

[dependencies]
libc = "0.2.172"
